--- a/index.html
+++ b/index.html
@@ -15,13 +15,13 @@
             <a class="link link-active" href="/">Is Triangle?</a>
           </li>
           <li class="list-item-inline">
-            <a class="link" href="/">Quiz</a>
+            <a class="link" href="quiz.html">Quiz</a>
           </li>
           <li class="list-item-inline">
-            <a class="link" href="/">Hypotenuse</a>
+            <a class="link" href="hypotenuse.html">Hypotenuse</a>
           </li>
           <li class="list-item-inline">
-            <a class="link" href="/">Area of Triangle</a>
+            <a class="link" href="area.html">Area of Triangle</a>
           </li>
         </ul>
       </nav>
@@ -32,11 +32,11 @@
       <label for="angle1"
         >Angle1(In Degress)<input type="number" class="angle-input"
       /></label>
-      <label for="angle1"
-        >Angle1(In Degress)<input type="number" class="angle-input"
+      <label for="angle2"
+        >Angle2(In Degress)<input type="number" class="angle-input"
       /></label>
-      <label for="angle1"
-        >Angle1(In Degress)<input type="number" class="angle-input"
+      <label for="angle3"
+        >Angle3(In Degress)<input type="number" class="angle-input"
       /></label>
       <button id="btn-is-triangle">Is Triangle?</button>
       <p id="output"></p>
@@ -47,12 +47,18 @@
       <ul class="social-links list-non-bullet">
         <li class="list-item-inline">
           <a class="link" href="https://twitter.com/_Manvendra_" target="_blank"
-            ><img class="link-image" src="./images/twitter.png" alt=""
+            ><img
+              class="link-image"
+              src="./images/twitter.png"
+              alt="twitter account link"
           /></a>
         </li>
         <li class="list-item-inline">
           <a class="link" href="https://github.com/Manvendra5" target="_blank"
-            ><img class="link-image" src="./images/github.png" alt=""
+            ><img
+              class="link-image"
+              src="./images/github.png"
+              alt="github account link"
           /></a>
         </li>
         <li class="list-item-inline">
@@ -60,7 +66,10 @@
             class="link"
             href="https://linkedin.com/in/manvendra-singh-bais"
             target="_blank"
-            ><img class="link-image" src="./images/linkedin.png" alt=""
+            ><img
+              class="link-image"
+              src="./images/linkedin.png"
+              alt="LinkedIn account link"
           /></a>
         </li>
       </ul>
