--- a/quiz.html
+++ b/quiz.html
@@ -18,10 +18,10 @@
             <a class="link link-active" href="quiz.html">Quiz</a>
           </li>
           <li class="list-item-inline">
-            <a class="link" href="/">Hypotenuse</a>
+            <a class="link" href="hypotenuse.html">Hypotenuse</a>
           </li>
           <li class="list-item-inline">
-            <a class="link" href="/">Area of Triangle</a>
+            <a class="link" href="area.html">Area of Triangle</a>
           </li>
         </ul>
       </nav>
@@ -231,12 +231,18 @@
       <ul class="social-links list-non-bullet">
         <li class="list-item-inline">
           <a class="link" href="https://twitter.com/_Manvendra_" target="_blank"
-            ><img class="link-image" src="./images/twitter.png" alt=""
+            ><img
+              class="link-image"
+              src="./images/twitter.png"
+              alt="twitter account link"
           /></a>
         </li>
         <li class="list-item-inline">
           <a class="link" href="https://github.com/Manvendra5" target="_blank"
-            ><img class="link-image" src="./images/github.png" alt=""
+            ><img
+              class="link-image"
+              src="./images/github.png"
+              alt="github account link"
           /></a>
         </li>
         <li class="list-item-inline">
@@ -244,7 +250,10 @@
             class="link"
             href="https://linkedin.com/in/manvendra-singh-bais"
             target="_blank"
-            ><img class="link-image" src="./images/linkedin.png" alt=""
+            ><img
+              class="link-image"
+              src="./images/linkedin.png"
+              alt="linkedIn account link"
           /></a>
         </li>
       </ul>
